--- a/css/app.scss
+++ b/css/app.scss
@@ -6,6 +6,7 @@ $services-background: #2D9BEA;
 $benefit-blue-box-background: #4FA3E0;
 $benefit-red-box-background: #EF5D5D;
 $benefit-purple-box-background: #915FD5;
+$overlay-background: rgba(0, 0, 0, 0.6);
 $raleway-font: 'Raleway',
 sans-serif;
 $source-sans-font: 'Source Sans Pro',
@@ -49,6 +50,115 @@ p {
     letter-spacing: 0.8px;
 }
 
+.img-effect {
+    position: relative;
+    overflow: hidden;
+    &:hover .overlay {
+        opacity: 1;
+    }
+    &:hover img {
+        transform: scale(1.05);
+    }
+    .overlay {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        height: 100%;
+        width: 100%;
+        opacity: 0;
+        transition: .5s ease;
+        background: $overlay-background;
+        cursor: default;
+        .overlay-content {
+            position: absolute;
+            width: 100%;
+            color: $white-color;
+            top: 50%;
+            padding: 0 35px;
+            text-align: center;
+            a.title {
+                font-family: $raleway-font;
+                font-size: 16px;
+                font-weight: 600;
+                text-transform: uppercase;
+                line-height: 1.4;
+                margin-bottom: 5px;
+                color: $white-color;
+            }
+            .subtitle {
+                margin-bottom: 5px;
+                a {
+                    font-family: $source-sans-font;
+                    font-size: 13px;
+                    font-style: italic;
+                    color: #cecece;
+                    letter-spacing: 0.5px;
+                    line-height: 1.55;
+                    text-align: center;
+                }
+                span {
+                    font-family: $source-sans-font;
+                    font-size: 13px;
+                    font-style: italic;
+                    color: #cecece;
+                    letter-spacing: 0.5px;
+                    line-height: 1.55;
+                }
+            }
+            p {
+                display: none;
+                font-family: $source-sans-font;
+                font-size: 15px;
+                font-weight: 300;
+                padding: 16px 0 20px;
+            }
+            @media screen and (min-width: $break-tablet) {
+                top: 25%;
+                p {
+                    display: none;
+                }
+            }
+            @media screen and(min-width: 1240px) {
+                p {
+                    display: block;
+                }
+            }
+            @media screen and(min-width: 1400px) {
+                top: 35%;
+            }
+        }
+    }
+    img {
+        max-width: 100%;
+        max-height: 100%;
+        transition: all linear 0.2s;
+    }
+}
+
+.slider {
+    background: none;
+    min-height: 600px;
+    .slick-prev,
+    .slick-next {
+        position: absolute;
+        top: -142px;
+    }
+    .slick-prev:before,
+    .slick-next:before {
+        font-size: 75px;
+    }
+    .slick-prev {
+        right: 0px;
+        left: auto;
+        margin-right: 140px;
+    }
+    .slick-next {
+        right: 65px;
+    }
+}
+
 #intro {
     background: url('https://demo.goodlayers.com/infinite/homepages/onepage/wp-content/uploads/sites/2/2016/05/bg-1.jpg') no-repeat center;
     background-attachment: fixed;
@@ -61,7 +171,7 @@ p {
         font-family: $raleway-font;
         font-size: 40px;
         font-weight: 700;
-        padding: 0 15px 60px 15px;
+        padding-bottom: 60px;
         text-transform: uppercase;
         line-height: 1.2;
         letter-spacing: 1px;
@@ -74,11 +184,9 @@ p {
         font-weight: 300;
         letter-spacing: 2px;
         text-transform: uppercase;
-        padding: 0 15px;
     }
     .intro-box {
         margin: 0 40px 30px 0;
-        padding: 0 15px;
         &.last {
             margin-right: 0;
         }
@@ -119,6 +227,10 @@ p {
     min-height: 100vh;
     .accordion {
         background: none;
+        padding: 15px 0 0 30px;
+    }
+    .accordion-item {
+        padding-left: 60px;
     }
     .accordion-title {
         font-family: $raleway-font;
@@ -238,31 +350,33 @@ p {
     }
 }
 
-$flip-card-height: 653px;
+$flip-card-height: 680px;
 .flip-card-container {
     position: relative;
-    width: 250px;
+    min-height: 473px;
     .flip-card {
-        perspective: 1000;
-        position: absolute;
+        position: relative;
         width: 100%;
+        min-height: 473px;
+        max-height: $flip-card-height;
         backface-visibility: hidden;
         -webkit-transform-style: preserve-3d;
         transform-style: preserve-3d;
         -webkit-transition: all 0.5s ease;
-        transition: all 0.5s ease;
-        padding: 60px 50px 40px;
-        &:hover {
+        transition: all 0.5s ease; //padding: 60px 50px 40px;
+        &:hover,
+        &.hover {
             -webkit-transform: rotateY(180deg);
             transform: rotateY(180deg);
         }
         .flip-card-front,
         .flip-card-back {
             position: absolute;
-            width: 100%;
+            max-height: $flip-card-height;
             -webkit-backface-visibility: hidden;
             backface-visibility: hidden;
             color: white;
+            min-height: 100%;
             top: 0;
             left: 0;
             background-size: cover;
@@ -271,12 +385,13 @@ $flip-card-height: 653px;
             text-align: center;
             line-height: 1.7;
             opacity: 0.7;
+            padding: 15px;
             .flip-card-frame {
-                margin: 15px;
-                border: 2px solid #2a80be;
+                //border: 2px solid #2a80be;
             }
             .flip-card-content {
-                padding: 60px 50px 40px;
+                min-height: 100%;
+                padding: 40px 30px 40px;
                 h5 {
                     font-family: $raleway-font;
                     font-size: 22px;
@@ -303,15 +418,21 @@ $flip-card-height: 653px;
             background: url("https://demo.goodlayers.com/infinite/homepages/onepage/wp-content/uploads/sites/2/2016/05/flipbox-5.jpg");
             -webkit-transform: rotateY(180deg);
             transform: rotateY(180deg);
+            .flip-card-frame {
+                //margin: 15px;
+                //border: 2px solid $white-color;
+            }
         }
     }
 }
 
 #works {
     padding: 95px 0 60px 0;
-    background: #f3f3f3;
+    background: #F3F3F3;
     .work-title {
+        margin-bottom: 60px;
         h3 {
+            display: inline-block;
             font-size: 41px;
             color: #0a0a0a;
         }
@@ -320,6 +441,49 @@ $flip-card-height: 653px;
             margin-bottom: 5px;
             color: #747474;
         }
+        .work-subtitle {
+            span {
+                display: none;
+                color: #747474;
+                height: 32px;
+                margin: 0px 40px 0px 25px;
+                border-right-width: 1px;
+                border-right-style: solid;
+                transform: rotate(36deg);
+                -moz-transform: rotate(36deg);
+                -webkit-transform: rotate(36deg);
+                transform-origin: 0% 100%;
+                -moz-transform-origin: 0% 100%;
+                -webkit-transform-origin: 0% 100%;
+            }
+            a {
+                font-family: $source-sans-font;
+                font-size: 14px;
+                font-weight: 300;
+                color: #747474;
+            }
+            @media screen and (min-width:1130px) {
+                display: inline-block;
+                span {
+                    display: inline-block;
+                }
+            }
+        }
+    }
+    .slider {
+        min-height: 330px;
+        @media screen and (min-width: 370px) {
+            min-height: 400px;
+        }
+        @media screen and (min-width: 400px) {
+            min-height: 600px;
+        }
+        @media screen and (min-width: $break-tablet) {
+            min-height: 430px;
+        }
+    }
+    .works-box {
+        padding-right: 30px;
     }
 }
 
@@ -380,13 +544,15 @@ $flip-card-height: 653px;
 }
 
 #news {
-    padding: 100px 15px 40px;
+    position: relative;
+    padding: 100px 0 40px;
     font-family: $source-sans-font;
     line-height: 1.7;
     background: url("https://demo.goodlayers.com/infinite/homepages/onepage/wp-content/uploads/sites/2/2016/05/bg-5.jpg") no-repeat center center;
     background-size: cover;
     background-attachment: fixed;
     color: $white-color;
+    overflow: hidden;
     .news-title {
         margin-bottom: 60px;
         text-align: center;
@@ -401,7 +567,8 @@ $flip-card-height: 653px;
         }
     }
     .news-box {
-        padding: 0 15px 30px;
+        padding-bottom: 30px;
+        padding-right: 30px;
         .news-box-img {
             margin-bottom: 27px;
         }
@@ -474,18 +641,6 @@ $flip-card-height: 653px;
     }
     .team-box {
         margin-bottom: 50px;
-        .team-box-img {
-            overflow: hidden;
-            img {
-                max-width: 100%;
-                max-height: 100%;
-                transition: all linear 0.2s;
-                &:hover {
-                    transform: scale(1.05);
-                    opacity: 0.9;
-                }
-            }
-        }
         .team-box-content {
             margin: 37px 0 0 33px;
             h5 {
@@ -582,6 +737,7 @@ $flip-card-height: 653px;
     .contact-social {
         text-align: center;
         line-height: 1.7;
+        margin-bottom: 60px;
         li {
             display: inline-block;
             margin-left: 40px;
@@ -600,12 +756,78 @@ $flip-card-height: 653px;
                 }
             }
         }
-        #form {
-            input[type=text],
-            input[type=email] {
-                padding: 0 7px;
-                margin-bottom: 14px;
-            }
+    }
+    #form {
+        position: relative;
+        font-family: $source-sans-font;
+        max-width: 670px;
+        margin: 0 auto;
+        input[type=text],
+        input[type=email], textarea {
+            font-family: $source-sans-font;
+            font-size: 15px;
+            font-weight: 400;
+            padding: 24px 22px;
+            color: #6A6A6A;
+            margin-bottom: 14px;
         }
+    }
+    textarea {
+        padding: 15px 22px;
+        height: 120px;
+    }
+    .submit {
+        display: block;
+        margin: 0 auto;
+        font-family: $source-sans-font;
+        font-size: 13px;
+        font-weight: 700;
+        background: #2F2F2F;
+        text-transform: uppercase;
+        padding: 15px 33px;
+        min-width: 200px;
+    }
+
+        
+    .is-invalid-input:not(:focus) {
+        background: none;
+        border-color: #cacaca;
+    }
+
+    .alert {
+        font-family: $source-sans-font;
+        font-size: 13px;
+        font-weight: 400;
+        color: #9b9b9b;
+        position: absolute;
+        width: 100%;
+        bottom: -55px;
+        background: none;
+        border-color: #F7E700;
+        border-width: 2px;
+        padding: 6px 20px;
+        margin: 0 15px;
+    }
+
+    .form-error {
+        font-family: $source-sans-font;
+        font-size: 13px;
+        font-weight: 400;
+        color: #9b9b9b;
+        margin-bottom: 15px;
+        margin-left: 2px;
+    }
+    ::placeholder {
+        font-weight: 400;
+        color: #6A6A6A;
+        opacity: 1;
+    }
+    :-ms-input-placeholder {
+        font-weight: 400;
+        color: #6A6A6A;
+    }
+    ::-ms-input-placeholder {
+        font-weight: 400;
+        color: #6A6A6A;
     }
 }
