--- a/css/layout.scss
+++ b/css/layout.scss
@@ -35,14 +35,12 @@ $break-tablet: 768px;
             border: 2px solid #dddddd;
             color: $black-color;
         }
-
         @media screen and (min-width: 560px) {
             margin: 0 80px;
             .page-nav-btn {
                 right: 25px;
             }
         }
-
         @media screen and (min-width: 620px) {
             margin: 0 40px;
             .page-nav-btn {
@@ -123,6 +121,7 @@ $break-tablet: 768px;
 }
 
 .wrapper {
+    position: relative;
     max-width: 550px;
     padding: 0 15px;
     margin: 0 auto;
@@ -135,5 +134,62 @@ $break-tablet: 768px;
 .grid-container.full {
     @media screen and (min-width: $break-medium) {
         margin-left: 340px;
+    }
+}
+
+.overlay-nav {
+    display: none;
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.9);
+    overflow-x: hidden;
+    transition: 0.5s;
+    z-index: 100;
+    .close-btn {
+        display: block;
+        font-size: 48px;
+        font-weight: 300;
+        text-align: center;
+        color: $white-color;
+        margin-top: 33px;
+    }
+    .overlay-content {
+        position: relative;
+        top: 8%;
+        width: 85%;
+        text-align: center;
+        margin: 0 auto;
+        li {
+            a {
+                display: block;
+                font-family: $raleway-font;
+                font-size: 20px;
+                font-weight: 600;
+                text-decoration: none;
+                color: $white-color;
+                transition: 0.3s;
+                padding: 15px 0;
+                border-bottom: 1px solid #747474;
+                text-transform: uppercase;
+                &:hover {
+                    color: #747474;
+                } //margin: 0 20px;
+            }
+        }
+        @media screen and (min-width: $break-tablet) {
+            top: 15%;
+            width: 80%;
+            max-width: 570px;
+            li {
+                a {
+                    font-size: 25px;
+                }
+            }
+        }
     }
 }
