--- a/css/app.scss
+++ b/css/app.scss
@@ -694,7 +694,10 @@ $flip-card-height: 680px;
 }
 
 #support {
-    background: #308acb;
+    //background: #308acb;
+    background: url("https://demo.goodlayers.com/infinite/homepages/onepage/wp-content/uploads/sites/2/2016/05/bg-2.jpg") no-repeat center center;
+    background-size: cover;
+    background-attachment: fixed;
     padding: 220px 0 160px 0;
     color: $white-color;
     line-height: 1.7;
@@ -763,7 +766,8 @@ $flip-card-height: 680px;
         max-width: 670px;
         margin: 0 auto;
         input[type=text],
-        input[type=email], textarea {
+        input[type=email],
+        textarea {
             font-family: $source-sans-font;
             font-size: 15px;
             font-weight: 400;
@@ -787,13 +791,10 @@ $flip-card-height: 680px;
         padding: 15px 33px;
         min-width: 200px;
     }
-
-        
     .is-invalid-input:not(:focus) {
         background: none;
         border-color: #cacaca;
     }
-
     .alert {
         font-family: $source-sans-font;
         font-size: 13px;
@@ -801,14 +802,13 @@ $flip-card-height: 680px;
         color: #9b9b9b;
         position: absolute;
         width: 100%;
-        bottom: -55px;
+        bottom: -70px;
         background: none;
         border-color: #F7E700;
         border-width: 2px;
         padding: 6px 20px;
         margin: 0 15px;
     }
-
     .form-error {
         font-family: $source-sans-font;
         font-size: 13px;
